--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,27 @@
 *.zip
 *.tar.gz
 *.rar
+.gradle
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+
+build/
+
+gradle
+gradlew
+gradlew.bat
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+### .DS_Store
+.DS_Store
+gradle/.DS_Store
+
+### VS Code ###
+.vscode/
